Crop node or FileOutput node bug. #35369

Closed
opened 2013-05-15 10:54:18 +02:00 by paul geraskin · 5 comments
Member

%%%--- Operating System, Graphics card ---
linux 64, nvidia gtx 560

- Blender version with error, and version that worked ---

2.67.1

- Short description of error ---

saved image is broken by Crop/FileOutput node.
Screenshot: http://i.imgur.com/6U4rpkk.png
Blend file: https://dl.dropboxusercontent.com/u/26887202/blender/crop_node_issue.blend

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- linux 64, nvidia gtx 560 - Blender version with error, and version that worked --- 2.67.1 - Short description of error --- saved image is broken by Crop/FileOutput node. Screenshot: http://i.imgur.com/6U4rpkk.png Blend file: https://dl.dropboxusercontent.com/u/26887202/blender/crop_node_issue.blend - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%2.66.1 version was ok with this blend file.%%%

%%%2.66.1 version was ok with this blend file.%%%

%%%This is something up to border in compositor thing. Will look into it.%%%

%%%This is something up to border in compositor thing. Will look into it.%%%

%%%Fixed issue with file output node in svn rev56879.

But noticed some wrong behavior of viewers and previews when using cropping to render border, but that's another issue and i'll look into it within next few days.%%%

%%%Fixed issue with file output node in svn rev56879. But noticed some wrong behavior of viewers and previews when using cropping to render border, but that's another issue and i'll look into it within next few days.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35369
No description provided.